[gd_scene load_steps=9 format=3 uid="uid://qmk87sj66yta"]

[ext_resource type="Script" path="res://scenes/npc.gd" id="1_03lex"]
[ext_resource type="Texture2D" uid="uid://bwpv2mc1x60tk" path="res://art_assets/Monkey.png" id="2_5mk0r"]
[ext_resource type="Script" path="res://scenes/area_2d.gd" id="3_x0eho"]
[ext_resource type="FontFile" uid="uid://bnn8i6yfvk8fc" path="res://MegamaxJonathanToo-YqOq2.ttf" id="4_1xa4a"]
[ext_resource type="PackedScene" uid="uid://bk0nd56tcbo2u" path="res://dialogue_box.tscn" id="5_jvoc7"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lx3mm"]
radius = 19.0
height = 38.0

[sub_resource type="CircleShape2D" id="CircleShape2D_abglq"]
radius = 26.0

[sub_resource type="LabelSettings" id="LabelSettings_uv1w0"]
font = ExtResource("4_1xa4a")
font_size = 11
outline_size = 2
outline_color = Color(0, 0, 0, 1)
shadow_size = 0

[node name="NPC_ethos" type="CharacterBody2D"]
position = Vector2(300, 124)
script = ExtResource("1_03lex")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_5mk0r")
region_enabled = true
region_rect = Rect2(82, 23, 11, 17)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_lx3mm")

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource("3_x0eho")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_abglq")

[node name="TalkPrompt" type="Label" parent="Area2D"]
offset_left = -99.0
offset_top = -20.0
offset_right = 99.0
offset_bottom = -3.0
text = "T"
label_settings = SubResource("LabelSettings_uv1w0")
horizontal_alignment = 1

[node name="DialogueBox" parent="." instance=ExtResource("5_jvoc7")]
visible = false

[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="Area2D" method="_on_body_exited"]
